<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">wmxfx</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="content_desc" translatable="false"> </string>
    <string name="newshoponline" translatable="false">新店上线</string>
    <string name="more" translatable="false">更多</string>
    <string name="shopicon" translatable="false">shopiconImage</string>
    <string name="appointment" translatable="false">接受预约</string>
    <string name="sequence" translatable="false">综合排序</string>
    <string name="alltaste" translatable="false">全部口味</string>
    <string name="all" translatable="false">全部</string>
    <string name="chinafood" translatable="false">中餐</string>
    <string name="fastfood" translatable="false">简餐</string>
    <string name="westfood" translatable="false">西式</string>
    <string name="tokyofood" translatable="false">日韩</string>
    <string name="foreignfood" translatable="false">异域</string>
    <string name="drink" translatable="false">饮品</string>
    <string name="snackfood" translatable="false">小食</string>
    <string name="cake" translatable="false">蛋糕</string>
    <string name="donut" translatable="false">甜品</string>
    <string name="allsequence" translatable="false">综合排序</string>
    <string name="lowdelivercost" translatable="false">配送费最低</string>
    <string name="highgrade" translatable="false">评分最高</string>
    <string name="highsale" translatable="false">销量最高</string>
    <string name="shopactivity" translatable="false">店铺活动: </string>
    <string name="back" translatable="false">返回</string>
    <string name="yuan" translatable="false">元</string>
    <string name="confirmcart" translatable="false">前往结算</string>
    <string name="totalcomment" translatable="false">整体评价</string>
    <string name="notice" translatable="false">此店铺暂时没有评价。</string>
    <string name="choose" translatable="false">选择</string>
    <string name="price" translatable="false">价格</string>
    <string name="num" translatable="false">数量</string>
    <string name="addtocart" translatable="false">加入购物车</string>
    <string name="cart" translatable="false">购物车</string>
    <string name="delete" translatable="false">删除</string>
    <string name="orderamount" translatable="false">订单合计</string>
    <string name="clearcart" translatable="false">清空购物车</string>
    <string name="checkorder" translatable="false">去结算</string>
    <string name="codelogin" translatable="false">短信验证码登陆</string>
    <string name="phone" translatable="false">手机号</string>
    <string name="code" translatable="false">验证码</string>
    <string name="getcode" translatable="false">获取验证码</string>
    <string name="login" translatable="false">验证并登陆</string>
    <string name="nomsg" translatable="false">未收到验证码？请拨打客服热线</string>
    <string name="hotline" translatable="false">4008-757679</string>
    <string name="orderconfirm" translatable="false">订单确认</string>
    <string name="info" translatable="false">详情</string>
    <string name="arrivetime" translatable="false">送达时间</string>
    <string name="rightnow" translatable="false">立即送餐</string>
    <string name="book" translatable="false">预约送餐</string>
    <string name="invoice" translatable="false">发票信息</string>
    <string name="comment" translatable="false">填写备注</string>
    <string name="payonline" translatable="false">在线付款</string>
    <string name="payon" translatable="false">货到付款</string>
    <string name="voucher" translatable="false">优惠劵</string>
    <string name="total" translatable="false">合计</string>
    <string name="intergral" translatable="false">积分抵用</string>
    <string name="chooseaddress" translatable="false">选择送餐地址</string>
    <string name="newaddr" translatable="false">新增收货地址</string>
    <string name="contacter" translatable="false">联系人</string>
    <string name="etcontacter" translatable="false">请输入您的姓名</string>
    <string name="contactphone" translatable="false">联系电话</string>
    <string name="etcontactphone" translatable="false">请输入您的手机号</string>
    <string name="contactaddr" translatable="false">送餐地址</string>
    <string name="etcontactaddr" translatable="false">街道、 小区、 写字楼、 学校</string>
    <string name="etcontactaddrinfo" translatable="false">详细地址（如门牌 、楼号等）</string>
    <string name="addaddress" translatable="false">新增送餐地址</string>
    <string name="save" translatable="false">保存</string>
    <string name="payway" translatable="false">网络支付方式</string>
    <string name="epay" translatable="false">支付宝支付</string>
    <string name="wechatpay" translatable="false">微信支付</string>
    <string name="confirmpay" translatable="false">确认支付</string>
    <string name="usercentertitle" translatable="false">个人中心</string>
    <string name="myintergal" translatable="false">我的积分</string>
    <string name="useraddress" translatable="false">常用地址</string>
    <string name="userorder" translatable="false">我的订单</string>
    <string name="uservoucher" translatable="false">优惠券</string>
    <string name="orderinfo" translatable="false">订单详情</string>
    <string name="forpay" translatable="false">等待支付</string>
    <string name="cancelpay" translatable="false">取消订单</string>
    <string name="entershop" translatable="false">进入店铺</string>
    <string name="delivery" translatable="false">配送费</string>
    <string name="myorder" translatable="false">我的订单</string>
    <string name="waitforpay" translatable="false">等待支付</string>
    <string name="onway" translatable="false">正在配送</string>
    <string name="unlogin" translatable="false">未登陆，请登陆再试</string>
    <string name="datanull" translatable="false">历史订单为空</string>
    <string name="datanullunfinish" translatable="false">暂时没有未完成订单</string>
    <string name="datauncommentnull" translatable="false">没有未评价订单</string>
    <string name="searchkey" translatable="false">请输入地址</string>
    <string name="searchbtn" translatable="false">搜索</string>
    <string name="locationtitle" translatable="false">切换地址</string>
    <string name="locnow" translatable="false">定位到当前地址</string>
    <string name="historyloc" translatable="false">历史定位</string>
    <string name="logout" translatable="false">退出登陆</string>

</resources>
