<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/textunused" >
    
    <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_alignParentLeft="true"
           android:onClick="true"
           android:background="@drawable/forpay">
           
           <ImageView 
              android:layout_width="16sp"
              android:layout_height="16sp"
              android:layout_gravity="center_vertical"
              android:contentDescription="@string/content_desc"
              android:src="@drawable/dollar"/>
           
           <TextView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="17sp"
               android:layout_marginLeft="5dp"
               android:textColor="@color/textunused"
               android:text="@string/forpay"/>
           
       </LinearLayout>
       
        <LinearLayout 
           android:id="@+id/ll_cancelpay"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_alignParentRight="true"
           android:onClick="true"
           android:background="@drawable/ordercancelselect">
           
           <ImageView 
              android:layout_width="16sp"
              android:layout_height="16sp"
              android:layout_gravity="center_vertical"
              android:contentDescription="@string/content_desc"
              android:src="@drawable/deletecorner"/>
           
           <TextView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="17sp"
               android:layout_marginLeft="5dp"
               android:textColor="@color/textunused"
               android:text="@string/cancelpay"/>
           
       </LinearLayout>

</RelativeLayout>
