<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:background="@color/backover"
    android:orientation="horizontal" >
    
    <RelativeLayout 
        android:id="@+id/rl_sequence"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:background="@color/black"
        android:padding="5dp"
        android:onClick="true">
        
        <TextView 
            android:id="@+id/tv_sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/textunused"
            android:layout_centerInParent="true"
            android:text="@string/sequence"/>
        
        <ImageView 
            android:id="@+id/iv_sequence"
            android:layout_toRightOf="@+id/tv_sequence"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/rdown"
            android:layout_centerVertical="true"/>
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_alltaste"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="5dp">
        
        <TextView 
            android:id="@+id/tv_alltaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textunused"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alltaste"/>
        
        <ImageView 
            android:id="@+id/iv_alltaste"
            android:layout_toRightOf="@+id/tv_alltaste"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/rdown"
            android:layout_centerVertical="true"/>
        
    </RelativeLayout>
    

</LinearLayout>
